# github-gitea-mirror

./: .env.sample  .envrc  .gitignore  README.md  dev-requirements.txt  github-gitea-mirror.py  pyproject.toml  requirements.txt
github-gitea-mirror/: __init__.py  github-gitea-mirror.py
